 + Racer: Reset mines, air mines and sticky mines every turn
 + A Space Adventure: Spacetrip: Meteorite appears blown-up after victory
 * Racer: Resize waypoints in custom-sized drawn maps
 * A Space Adventure: The First Stop: Fix broken victory condition when eliminating minions
 * A Space Adventure: Killing the Specialists: Don't award player health if enemy hurts itself

Lua:
 + Add RopeKnocking library

====================== 1.0.0 =======================
Highlights:
 + Campaigns now respect your team identity instead of overwriting it
 + Single missions now support team selection and track your progress
 + Challenges track the team's highscores
 + Hand-drawn maps can now be scaled with slider
 + Quick games are more random
 + Homing bee can be used as secondary ammo
 + Can change hedgehog order in The Specialists
 + Turn transition is less hectic
 + Various small HUD improvements
 * Fix wrong key names being displayed in key selection

Gameplay:
 + Quick games are more random: More map types, random team size and difficulty
 + Hand-drawn maps can now be scaled with slider
 + Slightly longer delays between turns to make it easier to follow the game
 + Track high scores in singleplayer challenges
 + Show check mark for completed scenarios, challenges and trainings
 + Training/challenge/scenario menu now supports team selection
 + Most target practices now highlight position of next target (must be unlocked first)
 + Homing bee can now be used as secondary ammo
 + If bee target was placed in the dark area in a wrap world edge map, bee will first fly across border
 + Teach computer players how to use extra time
 * Fix hedgehogs being pushed around (and other collision bugs) when they overlap
 * Fix homing bee flying weird if passing wrap world edge or target was placed beyond it
 * Fix air mine not colliding with crates initially
 * Fix buggy behaviour of time box if hog took damage or died before it arrived
 * Fix poison damage not working in first round